Added line breaks correctly in plist, change name of the WWDCCategoryProtocol array.

--- a/Josh Bruce/Josh Bruce/Model/ScholarshipDataModel.plist
+++ b/Josh Bruce/Josh Bruce/Model/ScholarshipDataModel.plist
@@ -10,7 +10,9 @@
 		<key>title</key>
 		<string>Plymouth University</string>
 		<key>body</key>
-		<string>Plymouth University has been an amazing adventure for Josh, giving him the best chance to go far in his career and support him every step of the way. Notably sponsoring his successful Scholarship to WWDC 2014.\n\nJosh is studying Computer Science and is due to graduate in 2016.</string>
+		<string>Plymouth University has been an amazing adventure for Josh, giving him the best chance to go far in his career and support him every step of the way. Notably sponsoring his successful Scholarship to WWDC 2014. 
+
+Josh is studying Computer Science and is due to graduate in 2016.</string>
 		<key>startDate</key>
 		<date>2012-09-01T08:00:00Z</date>
 	</dict>
