--- a/Josh Bruce/Josh Bruce/Model/ScholarshipDataModel.plist
+++ b/Josh Bruce/Josh Bruce/Model/ScholarshipDataModel.plist
@@ -3,6 +3,34 @@
 <plist version="1.0">
 <array>
 	<dict>
+		<key>urlString</key>
+		<string>https://swiftcasts.com</string>
+		<key>category</key>
+		<integer>1</integer>
+		<key>title</key>
+		<string>Swiftcasts</string>
+		<key>body</key>
+		<string>Swiftcasts is currently being built and will hopefully become an incredibly useful resource for Swift and iOS developers. Providing up-to-date screencasts on the latest technologies and updates. Arregating a wealth of knowledge and building a fantastic community.</string>
+		<key>imageName</key>
+		<string>projects-icon</string>
+		<key>startDate</key>
+		<date>2014-09-01T08:00:00Z</date>
+	</dict>
+	<dict>
+		<key>urlString</key>
+		<string>https://swiftcasts.com</string>
+		<key>category</key>
+		<integer>1</integer>
+		<key>title</key>
+		<string>Swiftcasts</string>
+		<key>body</key>
+		<string>Swiftcasts is currently being built and will hopefully become an incredibly useful resource for Swift and iOS developers. Providing up-to-date screencasts on the latest technologies and updates. Arregating a wealth of knowledge and building a fantastic community.</string>
+		<key>imageName</key>
+		<string>work-icon</string>
+		<key>startDate</key>
+		<date>2014-09-01T08:00:00Z</date>
+	</dict>
+	<dict>
 		<key>skillPercentage</key>
 		<real>80</real>
 		<key>category</key>
