Added the saxophone description.

--- a/Josh Bruce/Josh Bruce/Model/ScholarshipDataModel.plist
+++ b/Josh Bruce/Josh Bruce/Model/ScholarshipDataModel.plist
@@ -65,7 +65,9 @@
 		<key>imageName</key>
 		<string>saxophone-icon</string>
 		<key>body</key>
-		<string></string>
+		<string>Josh started playing the Saxophone at the age of 7 while at primary school. It&apos;s an incredibly cool instrument and Josh loved playing it. He managed to get to grade 6 while learning through primary school and at the beginning of secondary school and then put the Saxophone down for a while. One of Joshs&apos; proudest moments with the Saxophone was the final day of primary school where a standing ovation was given for the solo.
+
+Now 8 years on Josh has returned to play the Saxophone after recently being given a new one as a gift. Being able to pick up the Saxophone again after 8 years is a great feeling and its still that incredible instrument Josh played all those years ago.</string>
 		<key>category</key>
 		<integer>5</integer>
 		<key>title</key>
