Added large icons for all but the buttons as they need specific size icons.

--- a/Josh Bruce/Josh Bruce/Model/ScholarshipDataModel.plist
+++ b/Josh Bruce/Josh Bruce/Model/ScholarshipDataModel.plist
@@ -207,7 +207,7 @@ This was one of Joshs&apos; dream to visit San Francisco and Apple, this came tr
 
 JustPark is the sharing economy of parking, allowing customers to rent out their driveways to people to park in, this has also expanded into hotels and airports. JustPark is an Index Venture and BMWi backed company who has also just recently secured a record breaking crowdfunding round raising £3.7 million from members of the public.
 
-This has been an incredibly exiting year and Josh has learnt an incredibly amount while being in a buzzing startup. Everyone is motivated to the cause while also being interested by what all members of the team are doing.</string>
+Josh a long with JustPark has been invited to the Apple WatchKit labs in London to get hands on time with Apple Engineers, getting great feedback and ways to improve the WatchKit app which will be ready for launch on the 24th April 2015.</string>
 		<key>logoImageName</key>
 		<string>justpark-logo</string>
 		<key>endDate</key>
