--- a/Josh Bruce/Josh Bruce/Model/ScholarshipDataModel.plist
+++ b/Josh Bruce/Josh Bruce/Model/ScholarshipDataModel.plist
@@ -4,17 +4,7 @@
 <array>
 	<dict>
 		<key>body</key>
-		<string></string>
-		<key>category</key>
-		<integer>5</integer>
-		<key>title</key>
-		<string>Fitness</string>
-		<key>startDate</key>
-		<date>2005-05-01T08:00:00Z</date>
-	</dict>
-	<dict>
-		<key>body</key>
-		<string></string>
+		<string>Josh enjoys doing a lot of walking with his Girlfriend. Visiting remote places along the southern english coast with beautiful scenery. A very relaxing hobby which proves great for thinking about big decisions. Having the quite, open space to enjoy the beautiful world that we live in.</string>
 		<key>category</key>
 		<integer>5</integer>
 		<key>title</key>
@@ -60,7 +50,7 @@
 		<key>body</key>
 		<string>The Stanford University iOS course has always been a fantastic resource for Josh, something he has enrolled in and completed the lectures and assignments as released. This was a great way to learn quickly and keep up-to-date on best practises.
 
-With Swift having been anounced at WWDC 2014, retaking the quarter between January and April 2015 a long with the Stanford University class was a great opportunity to learn new things about Swift that Josh hadn&apos;t touched yet as well as brushing up on existing skills.
+With Swift having been announced at WWDC 2014, retaking the quarter between January and April 2015 along with the Stanford University class was a great opportunity to learn new things about Swift that Josh hadn&apos;t touched yet as well as brushing up on existing skills.
 
 Josh has been using this course as a reference ever since he started programming and creating apps for iOS back in 2011.</string>
 		<key>startDate</key>
@@ -98,7 +88,9 @@ Josh has taken this course while studying at Plymouth University and recently be
 		<key>title</key>
 		<string>24/7 Fitness</string>
 		<key>body</key>
-		<string></string>
+		<string>24/7 Fitness is a fully custom bespoke built website. The project went from design to implementation and launched in October 2014. The client was incredibly happy with the work Josh had done on the website and since is planning for some additional work to give the customers a complete package.
+
+The next stage in this development will be for card processing and customer accounts to live on their own website with the expansion into an iPhone application which will show gym timetables, how often they go, personalised routines and allow them to access any of the groups gyms.</string>
 		<key>imageName</key>
 		<string>247fitness-icon</string>
 		<key>startDate</key>
@@ -130,7 +122,9 @@ Josh has taken this course while studying at Plymouth University and recently be
 		<key>logoImageName</key>
 		<string>surftrack-logo</string>
 		<key>body</key>
-		<string>Josh setup a web development company in co-partnership with a friend in 2011 which has helped fund his studies at university. Gaining a lot of knowledge and experience a long the way. Web development has been a vital part of Joshs&apos; life in becoming an iOS developer.
+		<string>Josh setup a web development company in co-partnership with a friend in 2011 which has helped fund his studies at university. Gaining a lot of knowledge and experience a long the way. Web development has been a vital part of Josh&apos;s&apos; life in becoming an iOS developer.
+
+This gave Josh some incredible experience at a young age of managing time affectively and having a great passion for perfection, delivering content that the client wanted and gaining trust for recommendations of good work.
 </string>
 		<key>urlString</key>
 		<string>http://www.surftrack.co.uk</string>
@@ -157,7 +151,11 @@ Josh has taken this course while studying at Plymouth University and recently be
 		<key>imageName</key>
 		<string>apple-icon</string>
 		<key>body</key>
-		<string></string>
+		<string>Apple has been a fascination of Josh’s for many years. With the desire to own a Mac, to be a customer of a company that truly loves each and every one of them. The desire for perfection in every product and never settling for something good.
+
+Ever since the launch of the iPhone Josh has wanted to develop applications for the device and has done so since 2011. With a passion for teaching others along the way.
+
+The dream of one day possibly working for Apple is something that drives Josh everyday to attempt to create great products. The ultimate goal. To change the world.</string>
 		<key>category</key>
 		<integer>5</integer>
 		<key>title</key>
@@ -169,7 +167,7 @@ Josh has taken this course while studying at Plymouth University and recently be
 		<key>imageName</key>
 		<string>saxophone-icon</string>
 		<key>body</key>
-		<string>Josh started playing the Saxophone at the age of 7 while at primary school. It&apos;s an incredibly cool instrument and Josh loved playing it. He managed to get to grade 6 while learning through primary school and at the beginning of secondary school and then put the Saxophone down for a while. One of Joshs&apos; proudest moments with the Saxophone was the final day of primary school where a standing ovation was given for the solo.
+		<string>Josh started playing the Saxophone at the age of 7 while at primary school. It&apos;s an incredibly cool instrument and Josh loved playing it. He managed to get to grade 6 while learning through primary school and at the beginning of secondary school and then put the Saxophone down for a while. One of Josh&apos;s&apos; proudest moments with the Saxophone was the final day of primary school where a standing ovation was given for the solo.
 
 Now 8 years on Josh has returned to play the Saxophone after recently being given a new one as a gift. Being able to pick up the Saxophone again after 8 years is a great feeling and its still that incredible instrument Josh played all those years ago.</string>
 		<key>category</key>
@@ -181,7 +179,9 @@ Now 8 years on Josh has returned to play the Saxophone after recently being give
 	</dict>
 	<dict>
 		<key>body</key>
-		<string></string>
+		<string>Josh started playing tennis at the age of 11 and was fascinated by Wimbledon. Watching great tennis players play was inspiration to start playing tennis. Has since played tennis for his college and local club while enjoying every second of it.
+
+There was one particular tennis player who stood out from everyone else and this was truly inspiration to Josh and not just for tennis but as an attitude towards life in general. Roger Federer, a truly inspiration role model and helped shape the life that Josh leads today.</string>
 		<key>category</key>
 		<integer>5</integer>
 		<key>title</key>
@@ -193,7 +193,11 @@ Now 8 years on Josh has returned to play the Saxophone after recently being give
 		<key>imageName</key>
 		<string>salesx-icon</string>
 		<key>body</key>
-		<string></string>
+		<string>Josh started working as a contractor for SalesX after their CEO (Joe Khoei) found Josh on YouTube teaching about Twitter Bootstrap. This lead to Joe giving Josh some basic web development work.
+
+Josh proved to Joe he was a great asset and as a result of the first piece of work I become one of SalesX’s main contractors for web development work. Notably creating their new website salesx.com as well as many of their clients websites.
+
+In the summer of 2014 Joe helped Josh achieve his dream of coming to San Francisco by sponsoring money for Josh to stay while attending WWDC 2014 this was an incredibly gesture and Joe has become a great friend.</string>
 		<key>endDate</key>
 		<date>2014-09-01T16:00:00Z</date>
 		<key>urlString</key>
@@ -219,9 +223,11 @@ Now 8 years on Josh has returned to play the Saxophone after recently being give
 		<key>title</key>
 		<string>Tossr</string>
 		<key>body</key>
-		<string>Tossr is a small MVP for betting on a game of luck, 50-50 chance or winning with heads or tails. Josh worked on this application as freelance with a friend and it took approximatly one month to complete.
+		<string>Tossr is a small MVP for betting on a game of luck, 50-50 chance or winning with heads or tails. Josh worked on this application as freelance with a friend and it took approximately one month to complete.
 
-Tossr required realtime communication between the players using Pusher and data persistance using Parse this allowed for a very quick MVP to be created without having to build all the infrasture from scratch. </string>
+Tossr required realtime communication between the players using Pusher as well as data persistence using Parse this allowed for a very quick MVP to be created without having to build all the infrastructure from scratch. 
+
+This was a great application to build and learn from as it required some really interesting features such as realtime communication and of course another application built entirely in Swift.</string>
 		<key>imageName</key>
 		<string>tossr-icon</string>
 		<key>startDate</key>
@@ -243,7 +249,7 @@ Tossr required realtime communication between the players using Pusher and data 
 
 Josh learnt a great deal while at WWDC, getting hands on experience with the best engineers in the world, meeting some of the worlds greatest developers behind some of the App Stores greatest hits and having a fantastic time.
 
-This was one of Joshs&apos; dream to visit San Francisco and Apple, this came true in June 2014 and I would love to attend the conference again. It was a fantastic learning experience.</string>
+This was one of Josh&apos;s&apos; dream to visit San Francisco and Apple, this came true in June 2014 and I would love to attend the conference again. It was a fantastic learning experience.</string>
 		<key>imageName</key>
 		<string>wwdc-scholarship-2014-icon</string>
 		<key>startDate</key>
@@ -253,7 +259,7 @@ This was one of Joshs&apos; dream to visit San Francisco and Apple, this came tr
 		<key>imageName</key>
 		<string>justpark-app-icon</string>
 		<key>body</key>
-		<string>Josh is on a year long industrial placement with JustPark as an iOS Engineer helping build a brand new app written entirly in Swift. This is a complete re-write from their previos app. While Josh is here he has assisted with building this entirely new application in Swift which is available on the App Store and also about to release a WatchKit app to accompany it.
+		<string>Josh is on a year long industrial placement with JustPark as an iOS Engineer helping build a brand new app written entirely in Swift. This is a complete re-write from their previous app. While Josh is here he has assisted with building this entirely new application in Swift which is available on the App Store and also about to release a WatchKit app to accompany it.
 
 JustPark is the sharing economy of parking, allowing customers to rent out their driveways to people to park in, this has also expanded into hotels and airports. JustPark is an Index Venture and BMWi backed company who has also just recently secured a record breaking crowdfunding round raising £3.7 million from members of the public.
 
@@ -281,9 +287,9 @@ Josh a long with JustPark has been invited to the Apple WatchKit labs in London 
 		<key>title</key>
 		<string>Swift</string>
 		<key>body</key>
-		<string>Josh started learning Swift from the minute it was announced on 2nd June 2014. Josh was lucky enough to be at the 2014 WWDC and was able to learn quickly alongisde many great developers and ask the engineers lots of questions about the new and exciting programming language Swift.
+		<string>Josh started learning Swift from the minute it was announced on 2nd June 2014. Josh was lucky enough to be at the 2014 WWDC and was able to learn quickly alongside many great developers and ask the engineers lots of questions about the new and exciting programming language Swift.
 
-Swift is a fantastic new language with all the modern features, giving new developers to iOS a great starting point.</string>
+Swift is a fantastic new language with all the modern features, giving new developers to iOS a great starting point. This is also an incredibly fun language to use. All projects that Josh creates are now in Swift and is vert excited to see where the language goes and the new development of Swift at WWDC 2015.</string>
 		<key>startDate</key>
 		<date>2014-06-02T10:00:00Z</date>
 	</dict>
@@ -297,9 +303,9 @@ Swift is a fantastic new language with all the modern features, giving new devel
 		<key>title</key>
 		<string>Plymouth University</string>
 		<key>body</key>
-		<string>Plymouth University has been an amazing adventure for Josh, giving him the best chance to go far in his career and support him every step of the way. Notably sponsoring his successful Scholarship to WWDC 2014. 
+		<string>Plymouth University has been an amazing adventure for Josh, giving him the best chance to go far in his career and support him every step of the way. Notably sponsoring his successful Scholarship to WWDC 2014.
 
-Josh is studying Computer Science and is due to graduate in 2016. With many great lecturers teaching fantastic subjects such as Database Design and Object Oriented Programming with Design Patterns, being two of Joshs&apos; favourites.</string>
+Josh is studying Computer Science and is due to graduate in 2016 and with a projected grade of a first class honours, the highest grade achievable to date. With many great lecturers teaching fantastic subjects such as Database Design and Object Oriented Programming with Design Patterns, being two of Josh&apos;s&apos; favourites.</string>
 		<key>startDate</key>
 		<date>2012-09-01T08:00:00Z</date>
 	</dict>
@@ -320,9 +326,9 @@ Josh is studying Computer Science and is due to graduate in 2016. With many grea
 		<key>title</key>
 		<string>Swiftcasts</string>
 		<key>body</key>
-		<string>Swiftcasts is currently being built and will hopefully become an incredibly useful resource for Swift and iOS developers. Providing up-to-date screencasts on the latest technologies and updates. Arregating a wealth of knowledge and building a fantastic community.
+		<string>Swiftcasts is currently being built and will hopefully become an incredibly useful resource for Swift and iOS developers. Providing up-to-date screencasts on the latest technologies and updates. Aggregating a wealth of knowledge in one place, building a fantastic community.
 
-Swiftcasts will be aimed at all skill levels, ranging from new Swift/iOS developers to the veterans who have been developing on iOS for a long time.</string>
+Swiftcasts will be aimed at all skill levels, ranging from new Swift/iOS developers to the veterans who have been developing on iOS for a long time. Josh’s plan for Swiftcasts is to have courses / series on larger topics and other short lessons of helpful tips and tricks to developing a great application.</string>
 		<key>imageName</key>
 		<string>swiftcasts-logo</string>
 		<key>startDate</key>
@@ -332,9 +338,9 @@ Swiftcasts will be aimed at all skill levels, ranging from new Swift/iOS develop
 		<key>imageName</key>
 		<string>acemobile-icon</string>
 		<key>body</key>
-		<string>Josh took a summer internship at NeuroCoRe, a leading app development company within the medical field. Josh was working on ACEmobile while working here over the summer, a tool used to help diagnose patients with Alzimers earlier. ACEmobile is also attemping to replace the ACE-III paper test and becoem universally known as the tool to use when testing for Alzimers.
+		<string>Josh took a summer internship at NeuroCoRe, a leading app development company within the medical field. Josh was working on ACEmobile while working here over the summer, a tool used to help diagnose patients with Alzheimer’s earlier. ACEmobile is also attempting to replace the ACE-III paper test and become universally known as the tool to use when testing for Alzheimer&apos;s.
 
-Josh also worked on a number of other minor tools which were in development, one of which was for Parkinsons. This was a tapping test to see if the patient could tap to a rythm with an audio cue as well as how fast they could tap. 
+Josh also worked on a number of other minor tools which were in development, one of which was for Parkinson&apos;s. This was a tapping test to see if the patient could tap to a rhythm with an audio cue as well as how fast they could tap. 
 
 If I were to do another internship with NeuroCoRe I would help / like to encourage them to use ResearchKit to get their applications out to the masses to get great feedback and revolutionise the medical industry with technology.</string>
 		<key>endDate</key>
